# FinInsightAI

./: .gitignore  README.md  docker-compose.yml  index.html  main.py  pyproject.toml
.github/workflows/: deploy.yml  tests.yml
Aby-RAG/: NOTES.txt  README.md  debug.py  debug_parser_run.py  main.py  temp.py  temp2.py
Aby-RAG/data/: Amazon.html  Apple.html  Google.html  Nvidia.html  Tesla.html
Aby-RAG/results/: Amazon_openai_20260413_183317.json  Apple_gpt-oss_20260413_170259.json  Apple_openai_20260413_181225.json  Google_ollama2_20260414_142447.json  Google_openai_20260413_181445.json  Google_openai_20260422_183916.json  Microsoft_ollama2_20260413_183225.json  Nvidia_openai_20260413_182914.json  Nvidia_openai_20260414_183753.json  Nvidia_openai_20260414_194249.json  Nvidia_openai_20260422_184001.json  Tesla_ollama2_20260414_153319.json  Tesla_openai_20260413_181628.json  Tesla_openai_20260422_183729.json
Aby-RAG/src/ingestion/: chunker.py  loader.py  parser.py  parser2.py
Aby-RAG/src/rag/: embedder.py  prompts.py  qa.py  retriever.py
Aby-RAG/src/utils/: logger.py
MCP/: .dockerignore  .env.example  Dockerfile  README.md  requirements.txt  server.py
RAG-Ingestion/: __init__.py  env  main.py
RAG-Ingestion/10K/: __init__.py  chunker.py  downloader.py  embedder.py  ingestor.py  loader.py  parser.py
RAG-Ingestion/News/: __init__.py  chunker.py  collector.py  ingestor.py  scraper.py  sentiment.py
RAG-Ingestion/shared/: __init__.py  base_ingestor.py  chroma_client.py  config.py  supabase_client.py
assets/: index-CFH6PgD5.css  index-CNx7jKvl.js
backend/: .dockerignore  .env.example  Dockerfile  requirements.txt
backend/app/: main.py
backend/app/agents/: financial_agent.py
backend/app/core/: config.py  database.py  dependencies.py
backend/app/schemas/: agent.py  analysis.py  chat.py
backend/app/services/: agent_service.py  analysis_service.py  chat_service.py  mcp_manager.py
data/: .env
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: auth.spec.ts  chat.spec.ts  dashboard.spec.ts  helpers.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/__tests__/: ChartBlock.test.tsx  NewsBlock.test.tsx  TickerBand.test.tsx  utils.test.ts
frontend/src/components/: BottomNav.tsx  ChartBlock.tsx  ConfidenceGauge.tsx  NewsBlock.tsx  Sidebar.tsx  TickerBand.tsx  ToolTraceStrip.tsx
frontend/src/context/: AuthContext.tsx  ChatSessionContext.tsx
frontend/src/data/: mockData.ts
frontend/src/hooks/: useAiOutlook.ts  useAnalysis.ts  useChat.ts  useCompanies.ts  useDisclosureInsights.ts  useMarketMacro.ts  useStockPrice.ts  useTickerBand.ts
frontend/src/lib/: database.types.ts  supabase.ts  toolCalls.ts
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Disclosures.tsx  Login.tsx  Sentiment.tsx
frontend/src/services/: analysisApi.ts  chatApi.ts
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
notebooks/: README.md  sentiment.ipynb
tests/: conftest.py  requirements-test.txt
tests/api/: test_agent_endpoints.py  test_analysis_endpoints.py  test_chat_endpoints.py
tests/e2e/: test_full_stack.py
tests/ingestion/: test_pipeline.py
tests/integration/: test_agent_service.py  test_analysis_service.py  test_news_ingestor.py
tests/performance/: test_response_times.py
tests/rag/: golden_dataset.json  test_rag.ipynb  test_ragas_evaluation.py
tests/rag/results/: analysis.ipynb  hit_rate_news_chroma_20260427.xlsx  hit_rate_news_openai_20260427.xlsx  (+11 more)
tests/unit/: test_agent_message_helpers.py  test_analysis_service_helpers.py  test_config.py  test_finbert_sentiment.py  test_mcp_tools.py  test_news_chunker.py
(+6 files in other folders)
